--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@privy-io/react-auth": "^2.11.1",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toggle": "^1.1.6",
     "class-variance-authority": "^0.7.1",
@@ -21,7 +22,8 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "viem": "^2.28.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
