--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@privy-io/react-auth": "^2.11.1",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toggle": "^1.1.6",
+    "@tanstack/react-query": "^5.74.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
