--- a/package.json
+++ b/package.json
@@ -14,51 +14,18 @@
   "main": "bin/cli.js",
   "types": "bin/cli.d.ts",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format:fix": "prettier --write .",
-    "format": "prettier --check .",
-    "lint:fix": "next lint --fix",
-    "prepare": "tsc"
+    "build:link": "tsc -p bin/tsconfig.json && npm link",
+    "release:patch": "npm version patch && npm publish",
+    "release:minor": "npm version minor && npm publish",
+    "release:major": "npm version major && npm publish"
   },
   "dependencies": {
-    "@privy-io/react-auth": "^2.11.1",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-toggle": "^1.1.6",
-    "@tanstack/react-query": "^5.74.7",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.503.0",
-    "next": "15.3.1",
-    "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0",
-    "viem": "^2.28.0"
+    "prompts": "^2.4.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "typescript": "^5.8.3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^8.31.0",
-    "@typescript-eslint/parser": "^8.31.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "prettier": "^3.5.3",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.2.8",
-    "typescript": "^5"
-  },
-  "overrides": {
-    "react-is": "^19.0.0-rc-69d4b800-20241021"
+    "@types/prompts": "^2.4.9",
+    "eslint": "^9"
   }
 }
